--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 19 13:47:01 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/plugin-devel.texi: adapted documentation to Frequency() changes.
+
 Sun Dec 19 02:21:33 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstcanvassource.c (csource_info_update): added categories 
