--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,11 @@
+Fri Dec 24 22:46:56 2004  Tim Janik  <timj@gtk.org>
+
+	* icons/compressor.xcf: updates to support saturation module icon.
+
+	* saturate.png: saturation module icon.
+
+	* moog.png: moog filter module icon.
+
 Sun Dec 19 00:21:27 2004  Tim Janik  <timj@gtk.org>
 
 	* davsyndrum.c (dav_syn_drum_update_modules): don't keep sample rate
