--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 FIXME(urgent):
 - disable StandardOsc->selfmod
+- add a "Creating Skins" section to the beast manual page
 - provide config-parameter (by engine) which provides 16kHz limit listening-threshold used implicitely in osc-code etc. (important for 48K,84K)
 - skip and retrigger updates for scope visibility changes
 - add midi control numbers to midi control enum values as tooltips
