--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Mon Dec 27 23:57:29 2004  Tim Janik  <timj@gtk.org>
+
+	* sfiprimitives.[hc]: call sfi_ring_uniq() from sfi_ring_uniq_free_deep()
+	if no destroy functions is given.
+
 Mon Dec 27 03:42:17 2004  Tim Janik  <timj@gtk.org>
 
 	* sfiprimitives.[hc]: added sfi_ring_uniq_free_deep() and
