--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+Mon Dec 27 23:58:48 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstwaveeditor.c:
+	* beast-gtk/bstqsampler.c: include fixes.
+
+	* beast-gtk/bststest.c: completely disabled.
+
+	* tools/bsewavetool.cc: new source file for bsewavetool. for now,
+	support loading and saving of bsewave files.
+
+	* tools/bsewavetool.h: cleanups, more adaptions to come.
+
+	* tools/bwtwave.h:
+	* tools/bwtwave.cc: new files, implementing the bsewave model
+	for bsewavetool.
+
+	* tools/Makefile.am: changed log domain, adapted bsewavetool build.
+
+	* tools/bsewavetool.c: removed.
+
+	* tools/*.c:
+	* *.c: BseErrorType enum fixups.
+
 Sun Dec 26 00:36:54 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstpianoroll.[hc]: removed cruft.
